Added tests for budget-service